--- a/TP_CourseWork/Views/Home/History.cshtml
+++ b/TP_CourseWork/Views/Home/History.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<Recognize>
+@{
     Layout = "_Layout";
     ViewData["Title"] = "История";
 }
@@ -9,15 +10,18 @@
 <table style="margin-top: 50px;" align="center">
 <tbody>
 <tr>
-<td style="padding: 10px;">Id</td>
-<td style="padding: 10px;">Изображение</td>
-<td style="padding: 10px;">Количество обнаруженных лиц</td>
+<td style="padding: 10px; text-align: center;">Id</td>
+<td style="padding: 10px; text-align: center;">Изображение</td>
+<td style="padding: 10px; text-align: center;">Количество обнаруженных лиц</td>
 </tr>
+@foreach (var rec in Model)
+{
 <tr>
-<td style="padding: 10px;">{}</td>
-<td style="padding: 10px;">{}</td>
-<td style="padding: 10px;"><input name="num" readonly="readonly" type="text" value="{}" /></td>
+<td style="padding: 10px; text-align: center;">@rec.Id</td>
+<td style="padding: 10px; text-align: center;"><img src="/Home/GetImage/@rec.Id" style="width: 150px; height: 100px"/></td>
+<td style="padding: 10px; text-align: center;">@rec.Result</td>
 </tr>
+}
 </tbody>
 </table>
 <div style="margin-top: 30px;" align="center"><input name="back" type="submit" value="Назад" /></div>
